test: `BaseInitData` 샘플 데이터 추가로 발생한 테스트 오류 해결